# samratkar.github.io

./: .env  .gitignore  Copy_of_LLM_Prod_Prompt_Engg_3.ipynb  Copy_of_LLM_Prod_RAG_Chunking_Strategies_(1).ipynb  Diffuser-Butterflies.ipynb  Diffusion_Part_1.ipynb  Diffusion_Project_Generate_Chinese_Characters.ipynb  Gemfile  GenAI_Fundamentals_Build_First_GAN_(1).ipynb  GenAI_Fundamentals_Introduction_to_diffusers.ipynb  LLM_Architecture_(1).ipynb  LLM_Prod_Prompt_Engineering.ipynb  Multi_head_attention_(1).ipynb  README.md  Viz_LLM_Instruction_Fine_tuning.ipynb  _config.yml  about.markdown  books.md  index.markdown  index.md  lighthouse.md  phd-action-list.md  projects.md  qar-ml-pipeline-aws.md  text.txt
.github/: copilot-instructions.md
.obsidian/: workspace.json
_data/: about.yml  books.yml  little_prince.csv  words.csv
_includes/: head.html  test.md
_layouts/: default.html  mermaid.html  page.html  post.html
_posts/: 2024-10-05-course-list.md  2024-10-05-my-first-blog.markdown  2024-10-05-retrieval-optimization.md  2024-10-05-the-journey.md  2024-10-09-managing-ai-risk.md  2024-10-12-vijay-dashami.md  2024-12-25-test.md  test.md
_posts/concepts/genai/notes-codes/memory/longtermmem/: 2025-08-20-llmmemory.md  MonitorSetup.ipynb  README.md  pyproject.toml
_posts/concepts/genai/notes-codes/memory/longtermmem/l2/: lesson2.ipynb
_posts/concepts/genai/notes-codes/memory/longtermmem/l3/: lesson_3.ipynb
_posts/concepts/genai/notes-codes/memory/longtermmem/l4/: lesson_4.ipynb
_posts/concepts/genai/notes-codes/memory/longtermmem/l5/: lesson_5.ipynb
(+907 files in other folders)
